# Dependency-related options
option(
    'crypto',
    type: 'combo',
    choices: ['botan', 'openssl'],
    value: 'openssl',
    description: 'Backend for cryptographical operations. Mandatory.',
)
option(
    'krb5',
    type: 'feature',
    description: 'Support for GSS-TSIG. Requires krb5 with gssapi.',
)
option('mysql', type: 'feature', description: 'Support for MySQL backends.')
option('netconf', type: 'feature', description: 'Support for kea-netconf.')
option(
    'postgresql',
    type: 'feature',
    description: 'Support for PostgreSQL backends.',
)

# Options for enabling various parts of code.
option('fuzz', type: 'feature', description: 'Support for fuzz testing.')
option(
    'logger-checks',
    type: 'feature',
    value: 'disabled',
    description: 'Check logger messages.',
)
option('shell', type: 'feature', description: 'Builds kea-shell.')
option('tests', type: 'feature', description: 'Support for tests.')
