# Missing in meson, default 'var/run', can be set to 'run'
# Note if/when meson will implement it the 'runstatedir' option name
# will be reserved and meson will raise an error...
option(
    'runstatedir',
    type: 'string',
    description: 'The directory for installing data files which the programs modify while they run.',
)

# Dependency-related options
option(
    'crypto',
    type: 'combo',
    choices: ['botan', 'openssl'],
    value: 'openssl',
    description: 'Backend for cryptographical operations. Mandatory.',
)
option(
    'krb5',
    type: 'feature',
    description: 'Support for GSS-TSIG. Requires krb5 with gssapi.',
)
option('mysql', type: 'feature', description: 'Support for MySQL backends.')
option('netconf', type: 'feature', description: 'Support for kea-netconf.')
option(
    'postgresql',
    type: 'feature',
    description: 'Support for PostgreSQL backends.',
)

# Options for enabling testing code (not real features).
option(
    'fuzz',
    type: 'feature',
    value: 'disabled',
    description: 'Support for fuzz testing.',
)
option(
    'tests',
    type: 'feature',
    value: 'disabled',
    description: 'Support for tests.',
)
